Basic layout complated

--- a/index.html
+++ b/index.html
@@ -10,58 +10,88 @@
       font-size: 16px;
       max-width: 960px;
     }
+
+    section {
+      border: dotted 1px #ccc;
+      padding: 5px 10px;
+    }
   </style>
 </head>
 
 <header>
-  <h1>HTML5: The Basics Tags</h1> <hr />
+  <h1>HTML5: The Basics Tags</h1>
+  <hr />
 </header>
 
 <body>
+  <section>
+    <p><strong>&lt;b&gt;</strong> and <strong>&lt;strong&gt;</strong> &ndash; Both tags would make a text look bold. However, second tag also describes a higher importance of the text. Also, according to the HTML 5 specification, the <strong>&lt;b&gt;</strong>      tag should be used as a LAST resort when no other tag is more appropriate. <br /> Example : <b>bold text</b>.</p>
+  </section>
 
-  <p><strong>&lt;br&gt;</strong> &ndash; asdasd</p>
+  <section>
+    <p><strong>&lt;i&gt;</strong> and <strong>&lt;em&gt;</strong> &ndash; Both tags would make a text look italic. However, second tag also describes a higher emphases of the text. Also, according to the HTML 5 specification, the <strong>&lt;i&gt;</strong>      tag should be used as a LAST resort when no other tag is more appropriate.</p>
+    <p>Example: <i>italic text</i>.</p>
+  </section>
 
-  <p><strong>&lt;hr&gt;</strong> &ndash; asdasd</p>
+  <section>
+    <p><strong>&lt;br&gt;</strong> &ndash; asdasd</p>
+  </section>
 
-  <p><strong>&lt;p&gt;</strong> &ndash; asdasd</p>
+  <section>
+    <p><strong>&lt;hr&gt;</strong> &ndash; asdasd</p>
+  </section>
 
-  <p><strong>&lt;q&gt;</strong> &ndash; asdasd</p>
+  <section>
+    <p><strong>&lt;p&gt;</strong> &ndash; asdasd</p>
+  </section>
 
-  <p><strong>&lt;b&gt;</strong> and <strong>&lt;strong&gt;</strong> &ndash; Both tags would make a text look bold. However, second tag also describes a higher importance of the text. Also, according to the HTML 5 specification, the <strong>&lt;b&gt;</strong> tag should be used as a LAST resort when no other
-    tag is more appropriate. <br /> Example : <b>bold text</b>.</p>
+  <section>
+    <p><strong>&lt;q&gt;</strong> &ndash; asdasd</p>
+  </section>
 
-  <p><strong>&lt;i&gt;</strong> and <strong>&lt;em&gt;</strong>  &ndash; Both tags would make a text look italic. However, second tag also describes a higher emphases of the text. Also, according to the HTML 5 specification, the <strong>&lt;i&gt;</strong> tag should be used as a LAST resort when no other
-    tag is more appropriate. </br> Example: <i>italic text</i>.</p>
+  <section>
+    <p><strong>&lt;ins&gt;</strong> &ndash; asdasd</p>
+  </section>
 
+  <section>
+    <p><strong>&lt;del&gt;</strong> &ndash; asdasd</p>
+  </section>
 
-  <p>&lt;ins&gt; &ndash; </p>
+  <section>
+    <p><strong>&lt;s&gt;</strong> &ndash; asdasd</p>
+  </section>
 
+  <section>
+    <p><strong>&lt;mark&gt;</strong> &ndash; asdasd</p>
+  </section>
 
+  <section>
+    <p><strong>&lt;cite&gt;</strong> &ndash; asdasd</p>
+  </section>
 
-  <del>
+  <section>
+    <p><strong>&lt;backquote&gt;</strong> &ndash; asdasd</p>
+  </section>
 
-<s>
+  <section>
+    <p><strong>&lt;abbr&gt;</strong> &ndash; asdasd</p>
+  </section>
 
-<mark> -
+  <section>
+    <p><strong>&lt;dfn&gt;</strong> &ndash; asdasd</p>
+  </section>
 
-<cite> -
+  <section>
+    <p><strong>&lt;sup&gt;</strong> &ndash; This tag defines superscript text. Superscript text appears half a character above the normal line, and is sometimes rendered in a smaller font. An example: 5<sup>th</sup>.</p>
+  </section>
 
-<backquote> -
+  <section>
+    <p><strong>&lt;sub&gt;</strong> &ndash; This tag defines subscript text. Subscript text appears half a character below the normal line, and is sometimes rendered in a smaller font. An example: H<sub>2</sub>O.</p>
+  </section>
+</body>
 
-<abbr>
+<footer>
+  <p> Tag definition for each tag was sourced from <a href="https://www.w3schools.com/tags/tag_sub.asp">here</a>.</p>
+</footer>
 
-<dfn> -
-
-
-&lt;sup&gt; - This tag defines superscript text. Superscript text appears half a character above the normal line, and is sometimes rendered in a smaller font. An example: 5<sup>th</sup>. <a href="https://www.w3schools.com/tags/tag_sup.asp">Source</a>
-
-&lt;sub&gt; - This tag defines subscript text. Subscript text appears half a character below the normal line, and is sometimes rendered in a smaller font. An example: H<sub>2</sub>O.
-
-
-Tag definition  for each tag was sourced from <a href="https://www.w3schools.com/tags/tag_sub.asp">here</a>.
-
-
-
-
-  </body>
 </html>
