--- a/index.html
+++ b/index.html
@@ -4,34 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML5: The Basics Tags</title>
-  <style media="screen">
-    body {
-      background-color: #eee;
-      font-family: helvetica;
-      font-size: 16px;
-      text-align: justify;
-      max-width: 960px;
-      margin: 0 auto;
-    }
-
-    section {
-      border: groove 1px #2d2d2d;
-      padding: 5px 10px;
-      margin: 50px 0;
-    }
-
-    header h1 {
-      text-align: center;
-    }
-
-    .indent {
-      margin-left: 10px;
-    }
-
-    .indent2 {
-      margin-left: 20px;
-    }
-  </style>
+  <link rel="stylesheet" href="/css/styles.min.css">
 </head>
 
 <header>
