--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
   <meta charset="utf-8">
   <title>HTML5: The Basics Tags</title>
   <link rel="stylesheet" href="/css/styles.min.css">
+  <!-- IE9 HTML5 Fix -->
+  <!--[if lt IE 9]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 </head>
 
 <header>
-  <h1>HTML5: The Basics Tags</h1>
+  <h1>HTML5: The Basics</h1>
+  <nav>
+    <ul>
+      <li>Home</li>
+      <li>Images</li>
+      <li>Table</li>
+    </ul>
+  </nav>
 </header>
 
 <body>
