--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML5: The Basics Tags</title>
-  <link rel="stylesheet" href="/css/styles.min.css">
+  <link rel="stylesheet" href="styles.min.css">
   <!-- IE9 HTML5 Fix -->
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
