--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HTML5: The Basics Tags</title>
+  <title>HTML5: The Basics</title>
   <link rel="stylesheet" href="styles.min.css">
   <!-- IE9 HTML5 Fix -->
   <!--[if lt IE 9]>
