--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <h1>HTML5: The Basics</h1>
     <nav>
       <ul>
-        <li>Home</li>
-        <li>HTML</li>
-        <li>Images</li>
-        <li>Tables</li>
-        <li>Layout</li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">HTML</a></li>
+        <li><a href="#">Images</a></li>
+        <li><a href="#">Tables</a></li>
+        <li><a href="#">Layout</a></li>
       </ul>
     </nav>
   </header>
